--- a/manager/src/main/res/layout/tab_font_view.xml
+++ b/manager/src/main/res/layout/tab_font_view.xml
@@ -8,6 +8,6 @@
     android:stateListAnimator="@animator/selected_animator"
     android:text="Mm"
     android:textAlignment="center"
-    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+    android:textSize="@dimen/min_quote_size"
     android:textColor="@color/selected_font"
     android:textStyle="bold" />
