--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
 
     <RelativeLayout
         android:animateLayoutChanges="true"
+        android:layout_marginBottom="?android:actionBarSize"
         android:background="@color/md_black"
         android:layout_height="match_parent"
         android:id="@+id/mainContainer"
@@ -15,7 +16,7 @@
             android:layout_above="@id/mainBottom"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
-            android:layout_margin="@dimen/margin_small"
+            android:layout_marginHorizontal="@dimen/margin_small"
             app:cardCornerRadius="@dimen/radius_default"
             android:layout_width="match_parent"
             app:cardElevation="0dp">
