--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -3,18 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <RelativeLayout
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/quotesrecyclerview"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:orientation="vertical"
+        tools:itemCount="4"
+        tools:listitem="@layout/quotes_card" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            tools:itemCount="4"
-            tools:listitem="@layout/quotes_card"
-            android:orientation="vertical"
-            android:id="@+id/quotesrecyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </RelativeLayout>
 </layout>
