--- a/manager/src/main/res/layout/activity_manager.xml
+++ b/manager/src/main/res/layout/activity_manager.xml
@@ -11,6 +11,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
+        android:layout_marginBottom="?attr/actionBarSize"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/top_line"
