--- a/manager/src/main/res/layout/fragment_styles.xml
+++ b/manager/src/main/res/layout/fragment_styles.xml
@@ -5,6 +5,7 @@
 
 
     <RelativeLayout
+        android:fitsSystemWindows="true"
         android:id="@+id/styleContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
