--- a/base/src/main/res/layout/default_dialog.xml
+++ b/base/src/main/res/layout/default_dialog.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/margin_default"
         android:orientation="vertical"
         app:cardBackgroundColor="?android:colorBackground"
         app:cardCornerRadius="15dp"
