--- a/app/src/main/res/layout/profile_quote_card.xml
+++ b/app/src/main/res/layout/profile_quote_card.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:padding="@dimen/default_padding">
+            android:padding="@dimen/padding_default">
 
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -59,7 +59,7 @@
                 android:padding="@dimen/padding_default"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                android:textColor="?android:textColorPrimary"
+                android:textColor="@color/white"
                 android:textStyle="bold"
                 tools:text="Caio Alves Ferreira" />
 
@@ -77,7 +77,7 @@
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/default_padding"
+                    android:layout_margin="@dimen/padding_default"
                     android:layout_toStartOf="@id/messageButton"
                     android:text="@string/follow_user"
                     android:textColor="?android:textColorPrimary"
@@ -92,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_margin="@dimen/default_padding"
+                    android:layout_margin="@dimen/padding_default"
                     android:drawableEnd="@drawable/ic_paper_plane"
                     android:drawableTint="@color/white"
                     android:text="@string/message_user"
