--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -5,11 +5,11 @@
 
 
     <RelativeLayout
-        android:background="@color/nblack"
+        android:background="?blurOverLayColor"
         android:id="@+id/mainView"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="@dimen/default_padding"
+        android:padding="@dimen/padding_default"
         android:orientation="vertical">
 
 
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/dialog_title"
-            android:layout_margin="@dimen/default_padding"
+            android:layout_margin="@dimen/padding_default"
             android:textAlignment="center"
             style="@style/ToolbarTitle"
             android:layout_width="match_parent"
@@ -50,7 +50,7 @@
             app:indicatorColor="@color/colorPrimaryDark"
             app:indicatorSize="50dp"
             app:trackColor="@color/colorAccent"
-            app:trackCornerRadius="@dimen/default_radius"
+            app:trackCornerRadius="@dimen/radius_default"
             app:trackThickness="5dp" />
 
     </RelativeLayout>
