--- a/app/src/main/res/layout/quote_advertise_layout.xml
+++ b/app/src/main/res/layout/quote_advertise_layout.xml
@@ -13,6 +13,7 @@
 
     <RelativeLayout
         android:id="@+id/adCard"
+        android:background="@drawable/motiv_gradient"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="@dimen/cardview_default_elevation"
@@ -26,6 +27,7 @@
 
         <com.google.android.gms.ads.formats.UnifiedNativeAdView
             android:id="@+id/adView"
+            tools:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone">
@@ -50,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:orientation="vertical"
-                    android:padding="@dimen/default_padding">
+                    android:padding="@dimen/padding_default">
 
                     <com.google.android.gms.ads.formats.AdChoicesView
                         android:id="@+id/adChoices"
@@ -87,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:padding="@dimen/default_padding"
+                    android:padding="@dimen/padding_default"
                     android:text="@{advertise.body}"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
