--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/navigation_add"
         android:icon="@drawable/ic_add_outline"
-        android:iconTint="@color/white"
+        android:iconTint="?android:textColorPrimary"
         android:title="Novo post"
         app:showAsAction="always" />
     <item
