--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -6,5 +6,8 @@
     <external-path
         name="my_images"
         path="." />
+    <cache-path
+        name="shared_quotes"
+        path="." />
 
 </paths>
