--- a/base/src/main/res/drawable/round_bottom.xml
+++ b/base/src/main/res/drawable/round_bottom.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <corners
-        android:bottomLeftRadius="@dimen/radius_medium"
+        android:bottomLeftRadius="@dimen/radius_default"
         android:bottomRightRadius="@dimen/radius_default" />
 
 
