--- a/base/src/main/res/drawable/round_low.xml
+++ b/base/src/main/res/drawable/round_low.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="10dp" />
+    <corners android:radius="@dimen/radius_small" />
 
     <!-- below code for different radius for each corner. -->
 
@@ -15,6 +15,6 @@
 
 
     <!-- Background color -->
-    <solid android:color="@color/material_grey900" />
+    <solid android:color="?attr/navblurOverLayColor" />
 
 </shape>
