--- a/base/src/main/res/layout/profile_quote_card.xml
+++ b/base/src/main/res/layout/profile_quote_card.xml
@@ -77,7 +77,7 @@
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/default_padding"
+                    android:layout_margin="@dimen/padding_default"
                     android:layout_toStartOf="@id/messageButton"
                     android:text="@string/follow_user"
                     android:textColor="?android:textColorPrimary"
@@ -92,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_margin="@dimen/default_padding"
+                    android:layout_margin="@dimen/padding_default"
                     android:drawableEnd="@drawable/ic_paper_plane"
                     android:drawableTint="@color/md_white"
                     android:text="@string/message_user"
