--- a/base/src/main/res/layout/quote_advertise_layout.xml
+++ b/base/src/main/res/layout/quote_advertise_layout.xml
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:orientation="vertical"
-                    android:padding="@dimen/default_padding">
+                    android:padding="@dimen/padding_default">
 
                     <com.google.android.gms.ads.formats.AdChoicesView
                         android:id="@+id/adChoices"
@@ -87,7 +87,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:padding="@dimen/default_padding"
+                    android:padding="@dimen/padding_default"
                     android:text="@{advertise.body}"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
