--- a/base/src/main/res/values/dimens.xml
+++ b/base/src/main/res/values/dimens.xml
@@ -2,10 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
 
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="big_quote_size">56sp</dimen>
-    <dimen name="default_quote_size">45sp</dimen>
-    <dimen name="low_quote_size">28sp</dimen>
+    <dimen name="big_quote_size">48sp</dimen>
+    <dimen name="default_quote_size">34sp</dimen>
+    <dimen name="low_quote_size">24sp</dimen>
     <dimen name="min_quote_size">20sp</dimen>
-    <dimen name="default_padding">16dp</dimen>
-    <dimen name="default_radius">10dp</dimen>
+    <dimen name="topBlurSize">80dp</dimen>
 </resources>
