--- a/manager/src/main/res/layout/fragment_icons.xml
+++ b/manager/src/main/res/layout/fragment_icons.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingTop="@dimen/topBlurSize"
         android:id="@+id/managerRecycler"
         android:layout_width="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/pics_layout" />
