--- a/manager/src/main/res/layout/style_text_page_layout.xml
+++ b/manager/src/main/res/layout/style_text_page_layout.xml
@@ -22,6 +22,6 @@
             android:textAlignment="center"
             android:textColor="@color/md_white"
             android:textSize="@dimen/default_quote_size"
-            tools:showIn="@layout/fragment_styles" />
+            tools:showIn="@layout/new_style_form" />
     </RelativeLayout>
 </layout>
