--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:layout_above="@id/mainBottom"
+            app:cardBackgroundColor="?attr/dividerColor"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
             app:cardCornerRadius="@dimen/radius_default"
