--- a/base/src/main/res/drawable/fade_gradient.xml
+++ b/base/src/main/res/drawable/fade_gradient.xml
@@ -3,7 +3,7 @@
     <item>
         <shape>
 
-            <gradient android:angle="-90" android:centerColor="@color/oblack" android:endColor="@color/transparent" android:startColor="@color/lblack" />
+            <gradient android:angle="-90" android:centerColor="@color/oblack" android:endColor="@color/transparent" android:startColor="@color/nblack" />
         </shape>
     </item>
 </selector>
