--- a/base/src/main/res/layout/user_item.xml
+++ b/base/src/main/res/layout/user_item.xml
@@ -16,7 +16,7 @@
             android:id="@+id/profilepic"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            tools:src="@drawable/avatarnotfound" />
+            tools:src="@drawable/ic_neptune" />
 
         <TextView
             style="@style/TextAppearance.MaterialComponents.Subtitle2"
